--- a/package.json
+++ b/package.json
@@ -29,17 +29,23 @@
     "@svgr/webpack": "^6.1.2",
     "@types/chrome": "0.0.135",
     "@types/node": "^16.6.1",
-    "@types/react": "^17.0.15",
-    "@types/react-dom": "^17.0.9",
-    "@typescript-eslint/eslint-plugin": "4.17.0",
-    "@typescript-eslint/parser": "4.17.0",
-    "babel-loader": "^8.2.2",
+    "@types/react": "^18.2.15",
+    "@types/react-dom": "^18.2.7",
+    "@typescript-eslint/eslint-plugin": "^5.59.2",
+    "@typescript-eslint/parser": "^5.59.2",
+    "babel-eslint": "^10.1.0",
+    "babel-loader": "^9.1.2",
+    "babel-preset-react-app": "^10.0.1",
     "copy-webpack-plugin": "^9.0.1",
     "cross-env": "7.0.3",
     "css-loader": "^6.2.0",
-    "eslint": "^7.11.0",
-    "eslint-config-prettier": "6.10.1",
-    "eslint-plugin-import": "^2.23.4",
+    "eslint": "^8.40.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react": "7.32.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-unused-imports": "^2.0.0",
     "mini-css-extract-plugin": "^2.2.0",
     "prettier": "2.0.1",
     "svgo-loader": "^3.0.0",
@@ -51,19 +57,25 @@
     "webpack-dev-server": "^4.7.0"
   },
   "dependencies": {
+    "@chakra-ui/icons": "^2.1.1",
+    "@chakra-ui/react": "^2.8.2",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
     "@linaria/core": "^3.0.0-beta.4",
     "@linaria/react": "^3.0.0-beta.7",
     "@metamask/onboarding": "^1.0.1",
+    "@tanstack/react-query": "^5.62.16",
     "babel-polyfill": "^6.26.0",
     "dotenv-webpack": "^8.0.1",
-    "ethers": "^5.7.0",
+    "ethers": "^5.7.2",
     "formik": "^2.2.9",
+    "framer-motion": "^11.17.0",
     "human-standard-token-abi": "^2.0.0",
     "immer": "^9.0.6",
     "js-base64": "^3.7.2",
-    "react": "^17.0.1",
+    "react": "18.2.0",
     "react-custom-scrollbars": "^4.2.1",
-    "react-dom": "^17.0.1",
+    "react-dom": "18.2.0",
     "react-highlight-words": "^0.18.0",
     "react-markdown": "^8.0.3",
     "react-redux": "^7.2.6",
@@ -76,6 +88,8 @@
     "remark-gfm": "^3.0.1",
     "reselect": "^4.1.3",
     "typesafe-actions": "^5.1.0",
-    "util": "^0.12.4"
+    "util": "^0.12.4",
+    "viem": "2.x",
+    "wagmi": "^2.14.6"
   }
 }
